--- a/ActiveDirectoryComputerInfoUpdater/MainWindow.xaml
+++ b/ActiveDirectoryComputerInfoUpdater/MainWindow.xaml
@@ -22,7 +22,7 @@
                 </Grid.ColumnDefinitions>
 
                 <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="5">
-                    <Button Command="{Binding LoadOrganizationalUnitsCommand}" Content="Load Structure"  Margin="5" />
+                    <Button Command="{Binding LoadOrganizationalUnitsCommand}" Content="Load Structure" Padding="5"  Margin="5" />
                 </WrapPanel>
             </Grid>
         </Border>
