--- a/ActiveDirectoryComputerInfoUpdater/View/MainWindow.xaml
+++ b/ActiveDirectoryComputerInfoUpdater/View/MainWindow.xaml
@@ -77,6 +77,7 @@
                           SelectionMode="Single"
                           CanUserResizeColumns="True" 
                           CanUserSortColumns="True"
+                          BorderThickness="0"
                           ItemsSource="{Binding SelectedOrganizationalUnit.Computers}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Name" Binding="{Binding Name}" />
